[gd_scene load_steps=6 format=3 uid="uid://bhbklc6w2pyas"]

[ext_resource type="Script" path="res://ramires_tech_commons/InstagramButton/Scripts/instagram_button.gd" id="1_6o3gd"]
[ext_resource type="Texture2D" uid="uid://byucpntmlbxdw" path="res://ramires_tech_commons/InstagramButton/Textures/instagram_logo.png" id="1_fjo0x"]
[ext_resource type="Texture2D" path="res://Assets/Textures/GUI/slider-3.png" id="3_jquwb"]
[ext_resource type="Script" path="res://ramires_tech_commons/TextureButtonWithHover/Scripts/texture_button_with_hover_text.gd" id="4_q4gli"]
[ext_resource type="PackedScene" uid="uid://66k770jylyqr" path="res://ramires_tech_commons/TextureButtonWithHover/Scenes/texture_button_with_hover_text.tscn" id="5_rj1rl"]

[node name="InstagramButton" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48
script = ExtResource("1_6o3gd")
hover_color = Color(1, 1, 1, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(100, 100)
offset_left = 1772.0
offset_top = 932.0
offset_right = 1872.0
offset_bottom = 1032.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("1_fjo0x")
texture_pressed = ExtResource("1_fjo0x")
texture_hover = ExtResource("1_fjo0x")
ignore_texture_size = true
stretch_mode = 5

[node name="Panel" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(620, 420)
offset_left = 650.0
offset_top = 330.0
offset_right = 1270.0
offset_bottom = 750.0
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
layout_mode = 2
offset_top = -4.0
offset_right = 620.0
offset_bottom = 284.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 48

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(572, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Follow us on Instagram to follow our projects and have the best Game Dev content!

Go to page?"
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(620, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 140
alignment = 1

[node name="OkButton" type="TextureButton" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_hover = ExtResource("3_jquwb")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_q4gli")

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/OkButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -24.0
offset_right = 84.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Ok"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/OkButton"]
unique_name_in_owner = true

[node name="CloseButton" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_rj1rl")]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2

[node name="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" index="0"]
modulate = Color(1, 1, 1, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -31.0
offset_right = 127.5
offset_bottom = 31.0
theme = null
theme_override_font_sizes/font_size = 32
text = "Close
"

[connection signal="mouse_entered" from="CanvasLayer/TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/OkButton" to="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/OkButton" method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/OkButton" to="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/OkButton" method="_on_mouse_exited" flags=18]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]

[editable path="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/CloseButton"]
